# OpenCVPractice

./: CMakeLists.txt  README.md  close.cpp  grayscale.cpp  hello_opencv.cpp  open.cpp
examples/: blackhat.cpp  blend.cpp  close.cpp  hello_opencv.cpp  open.cpp  sobel.cpp  tophat.cpp
examples/core/: blackhat.cpp  blend.cpp  close.cpp  dft.cpp  filters.cpp  grayscale.cpp  hello_opencv.cpp  morph_grad.cpp  open.cpp  sobel.cpp  tophat.cpp
examples/imgproc/: draw.cpp
include/: drawing.h  filtering.h  image_operations.h  morphology.h
src/: drawing.cpp  filtering.cpp  image_operations.cpp  morphology.cpp
